--- a/areas/cpumap/cpumap04-map-xdp-prog.org
+++ b/areas/cpumap/cpumap04-map-xdp-prog.org
@@ -539,7 +539,7 @@ cpumap_kthread  total   7,012,141      0           0
 redirect_err    total   0              0          
 xdp_exception   total   0              0          
 #+end_example
-* Testing patchset(v10) on driver i40e
+* Testing redirect - patchset(v10) on driver i40e
 
 A new advanced feature that comes with this patchset is being able to
 XDP_REDIRECT again on the target/remote CPU. Remember first step was to
@@ -550,7 +550,7 @@ This can be used for solving RSS-hashing issues, where the hardware chose to
 only deliver packets to a single CPU, in a multi-CPU system.  This issue
 have been observed on EspressoBin and with ixgbe with double-tagged VLANs.
 
-** Normal redirect (i40e): back same device: 12,560,354 pps
+** Normal-redirect (i40e): back same device: 12,560,354 pps
 
 XDP-redirect back-same device command:
 #+begin_example
@@ -595,7 +595,7 @@ Ethtool(i40e2   ) stat:     32141140 (     32,141,140) <= rx_unicast /sec
 Ethtool(i40e2   ) stat:     12560354 (     12,560,354) <= tx_unicast /sec
 #+end_example
 
-** CPU-redirect (i40e): 2nd XDP_REDIRECT
+** CPU-redirect (i40e): 2nd XDP_REDIRECT: 8,799,342 pps
 
 The command to double-redirect is a bit long:
 #+begin_src sh
@@ -655,3 +655,128 @@ empty ruleset increase packet overhead with 26.76 ns.
 Thus, the results are actually quite good. Only having an overhead of
 34.02ns, from moving the packet to a remote CPU and redirecting it again is
 actually pretty low-overhead.
+
+
+* Testing XDP_DROP - patchset(v10) on driver i40e
+
+** XDP_DROP (i40e) on RX-CPU: 32,042,560 pps
+
+Result: 32,042,560 (rx-1.packets) packets/sec
+
+Usign xdp1 to drop packets on RX-CPU:
+#+begin_example
+ sudo ./xdp1 i40e2
+proto 17:   18219056 pkt/s
+proto 17:   32095399 pkt/s
+proto 17:   32091899 pkt/s
+proto 17:   32095376 pkt/s
+proto 17:   32021001 pkt/s
+#+end_example
+
+#+begin_example
+Show adapter(s) (i40e2) statistics (ONLY that changed!)
+Ethtool(i40e2   ) stat:   2917377586 (  2,917,377,586) <= port.rx_bytes /sec
+Ethtool(i40e2   ) stat:     11915658 (     11,915,658) <= port.rx_dropped /sec
+Ethtool(i40e2   ) stat:     45584005 (     45,584,005) <= port.rx_size_64 /sec
+Ethtool(i40e2   ) stat:     45584023 (     45,584,023) <= port.rx_unicast /sec
+Ethtool(i40e2   ) stat:   1922553617 (  1,922,553,617) <= rx-1.bytes /sec
+Ethtool(i40e2   ) stat:     32042560 (     32,042,560) <= rx-1.packets /sec
+Ethtool(i40e2   ) stat:      1625810 (      1,625,810) <= rx_dropped /sec
+Ethtool(i40e2   ) stat:     33668368 (     33,668,368) <= rx_unicast /sec
+#+end_example
+
+Perf stats:
+#+begin_export
+$ perf stat -C1 -e cycles -e  instructions -e cache-references -e cache-misses -e branches:k -e branch-misses:k -e l2_rqsts.all_code_rd -e l2_rqsts.code_rd_hit -e l2_rqsts.code_rd_miss -e L1-icache-load-misses -r 4 sleep 1
+
+ Performance counter stats for 'CPU(s) 1' (4 runs):
+
+  3.999.267.015      cycles                                              ( +-  0,02% )
+  9.162.584.243      instructions          #  2,29  insn per cycle       ( +-  0,02% )
+    114.072.706      cache-references                                    ( +-  0,02% )
+            193      cache-misses          #  0,000 % of all cache refs  ( +- 69,38% )
+  1.981.489.650      branches:k                                          ( +-  0,02% )
+      2.182.199      branch-misses:k       #  0,11% of all branches      ( +-  0,04% )
+        333.429      l2_rqsts.all_code_rd                                ( +-  1,27% )
+        313.376      l2_rqsts.code_rd_hit                                ( +-  1,48% )
+         19.961      l2_rqsts.code_rd_miss                               ( +-  3,19% )
+         89.349      L1-icache-load-misses                               ( +-  0,63% )
+
+     1,00127131 +- 0,00000862 seconds time elapsed  ( +-  0,00% )
+#+end_export
+
+** CPU-redirect (i40e): XDP_DROP on remote CPU
+
+#+begin_src sh
+sudo ./xdp_redirect_cpu --dev i40e2 --qsize 64 --cpu 4 --prog xdp_cpu_map0 \
+  --mprog-filename xdp1_kern.o \
+  --mprog-name xdp1
+#+end_src
+
+Output:
+#+begin_example
+Running XDP/eBPF prog_name:xdp_cpu_map0
+XDP-cpumap      CPU:to  pps            drop-pps    extra-info
+XDP-RX          1       18,316,778     0           0          
+XDP-RX          total   18,316,778     0          
+cpumap-enqueue    1:4   18,316,774     35,383      8.00       bulk-average
+cpumap-enqueue  sum:4   18,316,774     35,383      8.00       bulk-average
+cpumap_kthread  4       18,281,394     0           2,683      sched
+cpumap_kthread  total   18,281,394     0           2,683      sched-sum
+redirect_err    total   0              0          
+xdp_exception   total   0              0          
+
+2nd remote XDP/eBPF prog_name: xdp1
+XDP-cpumap      CPU:to  xdp-pass       xdp-drop    xdp-redir
+xdp-in-kthread  4       0              18,281,395  0         
+xdp-in-kthread  total   0              18,281,395  0         
+#+end_example
+
+Result: 18,281,395 pps
+- Cost per packet: 54.70 ns ((1/18281395)*10^9)
+
+Comparing to XDP_DROP directly on RX-CPU (32,042,560 pps) looks like a huge
+difference, but it is actually smaller than you think. The difference might
+be large in PPS, but at these high PPS speeds a small change in per packet
+overhead have a huge PPS effect. The difference in overhead in nano-seconds
+is only: 23.68ns ((1/18281395-1/32237558)*10^9).
+
+It is actually very impressive, that the overhead this low 23.68ns, to move
+a packet between CPUs. As a single cache-miss on this system cost around
+17.45 ns (measured with lmbench lat_mem_rd). (extra info L2 cache 5.36 ns)
+
+Output from perf stat:
+#+begin_example
+ perf stat -C4 -e cycles -e  instructions -e cache-references -e cache-misses -e branches:k -e branch-misses:k -e l2_rqsts.all_code_rd -e l2_rqsts.code_rd_hit -e l2_rqsts.code_rd_miss -e L1-icache-load-misses -r 4 sleep 1
+
+ Performance counter stats for 'CPU(s) 4' (4 runs):
+
+  3.751.072.860   cycles                                             ( +-  0,02% )
+  4.939.611.693   instructions          # 1,32  insn per cycle       ( +-  0,02% )
+     94.731.692   cache-references                                   ( +-  0,18% )
+            916   cache-misses          # 0,001 % of all cache refs  ( +- 32,90% )
+    970.593.949   branches:k                                         ( +-  0,02% )
+      4.401.589   branch-misses:k       # 0,45% of all branches      ( +-  0,61% )
+        598.914   l2_rqsts.all_code_rd                               ( +-  0,58% )
+        524.829   l2_rqsts.code_rd_hit                               ( +-  0,50% )
+         73.897   l2_rqsts.code_rd_miss                              ( +-  1,29% )
+        175.548   L1-icache-load-misses                              ( +-  0,75% )
+
+     1,00127269 +- 0,00000840 seconds time elapsed  ( +-  0,00% )
+#+end_example
+
+The perf stat measurements also show that we don't have any real
+cache-misses.
+
+The 1,32 instructions per cycle is surprisingly low. There are indications
+that this caused by =page_frag_free()= call, as perf record of
+=instructions= show that 25% of all instructions are spend there (in
+arch_atomic_dec_and_test() =lock   decl   0x34(%rdi)=).
+
+The cache-references (94.731.692) divided by (18,281,395) packets per sec
+(94731692/18281395) show that we have 5.18 cache-references per packet.
+
+The (4.406.506) branch-misses:k is lower than the packets per sec. Thus, we
+don't have a miss per packet, which is good.
+
+
