--- a/conference/NetDevConf2020-0x14/add-xdp-on-driver.org
+++ b/conference/NetDevConf2020-0x14/add-xdp-on-driver.org
@@ -390,8 +390,8 @@ int mvneta_xdp_xmit_back(..., struct xdp_buff *xdp)
 }
 #+end_src
 ** mvneta XDP: XDP_TX (2/4)
-#+REVEAL_HTML: <asciinema-player src="asciinema/xdp_redirect.cast" cols="168" rows="32"></asciinema-player>
-** mvneta XDP: XDP_TX (3/4) - mirror.c
+#+REVEAL_HTML: <asciinema-player src="asciinema/xdp_tx.cast" cols="168" rows="32"></asciinema-player>
+** mvneta XDP: XDP_TX (3/4) - ssh-mirror.c
 - swap ethernet and ip addresses for ssh connections
   - by Matteo Croce <mcroce@microsoft.com>
 #+begin_src C
@@ -415,8 +415,8 @@ int xdp_main(struct xdp_md *ctx)
 }
 #+end_src
 ** mvneta XDP: XDP_TX (4/4)
-#+REVEAL_HTML: <asciinema-player src="asciinema/xdp_tx.cast" cols="168" rows="32"></asciinema-player>
-** mvneta XDP: XDP_REDIRECT (1/3)
+#+REVEAL_HTML: <asciinema-player src="asciinema/ssh_mirror.cast" cols="168" rows="32"></asciinema-player>
+** mvneta XDP: XDP_REDIRECT (1/4)
 - /xdp_do_redirect()/ forwards the frame to:
   - remote interface - *ndo_xdp_xmit()*
   - remote cpu - */cpu_map/*
@@ -436,7 +436,7 @@ int mvneta_run_xdp(struct bpf_prog *prog, struct xdp_buff *xdp, ...)
       }
 }
 #+end_src
-** mvneta XDP: XDP_REDIRECT (2/3)
+** mvneta XDP: XDP_REDIRECT (2/4)
 - /mvneta_xdp_xmit()/ - mvneta is the destination of */XDP_REDIRECT/*
   - the page is mapped to DMA hw tx ring
 #+begin_src C
@@ -458,9 +458,32 @@ int mvneta_xdp_xmit(struct net_device *dev, int num_frame,
       ...
 }
 #+end_src
-** mvneta XDP: XDP_REDIRECT (3/3)
+** mvneta XDP: XDP_REDIRECT (3/4)
+- net-next/samples/bpf/xdp_redirect_kern.c
+#+begin_src C
+struct {
+	__uint(type, BPF_MAP_TYPE_ARRAY);
+	__type(key, int);
+	__type(value, int);
+	__uint(max_entries, 1);
+} tx_port SEC(".maps");
+
+SEC("xdp_redirect")
+int xdp_redirect_prog(struct xdp_md *ctx)
+{
+      int *ifindex, port = 0;
+      ...
+      ifindex = bpf_map_lookup_elem(&tx_port, &port);
+      ...
+      /* stats accounting */
+      ...
+      swap_src_dst_mac();
+      return bpf_redirect(*ifindex, 0);
+}
+#+end_src
+** mvneta XDP: XDP_REDIRECT (4/4)
 #+REVEAL_HTML: <asciinema-player src="asciinema/xdp_redirect.cast" cols="168" rows="32"></asciinema-player>
-** mvneta sw RPS: CPUMAP (1/3)
+** mvneta sw RPS: CPUMAP (1/5)
 - ESPRESSObin does not support hw */Receive Packet Steering (RPS)/*
   - all the packets are received on cpu0
 - With /CPUMAPs/ we can move the processing on a remote cpu
@@ -471,7 +494,7 @@ int mvneta_xdp_xmit(struct net_device *dev, int num_frame,
   - on cpu0 mvneta perforoms *XDP_REDIRECT* on a /CPUMAP/ entry
   - on the remote cpu we run an eBPF program
     - e.g. XDP_REDIRECT to another device
-** mvneta sw RPS: CPUMAP (2/3)
+** mvneta sw RPS: CPUMAP (2/5)
 - kthread binded on the remote cpu
 #+begin_src C
 int cpu_map_kthread_run(void *data)
@@ -495,8 +518,37 @@ int cpu_map_kthread_run(void *data)
 
 }
 #+end_src
-** mvneta sw RPS: CPUMAP (3/3)
-#+REVEAL_HTML: <asciinema-player src="asciinema/xdp_redirect.cast" cols="168" rows="32"></asciinema-player>
+** mvneta sw RPS: CPUMAP (3/5)
+
+#+ATTR_HTML: :class img-no-border
+[[file:images/cpumap-test-arch.png]]
+** mvneta sw RPS: CPUMAP (4/5)
+#+begin_src C
+int xdp_redirect_iperf(struct xdp_md *ctx)
+{
+      struct ethhdr *eth = data;
+      struct iphdr *iph = (struct iphdr *)(eth + 1);
+      struct tcphdr *tcph = (struct tcphdr *)(iph + 1);
+      ...
+      if (eth->h_proto != ntohs(ETH_P_IP) || iph->protocol != IPPROTO_TCP)
+            return XDP_PASS;
+
+      if (tcph->dest == ntohs(5201)) {
+            int *ifindex, port = 0;
+            long *value;
+
+            ifindex = bpf_map_lookup_elem(&tx_port, &port);
+            ...
+            value = bpf_map_lookup_elem(&rxcnt, &key);
+            /* set proper destination mac address */
+            memcpy(data, dst, 6);
+            return bpf_redirect(*ifindex, 0);
+      }
+      return XDP_PASS;
+}
+#+end_src
+** mvneta sw RPS: CPUMAP (5/5)
+#+REVEAL_HTML: <asciinema-player src="asciinema/cpumap.cast" cols="168" rows="32"></asciinema-player>
 ** mvneta: multi-buffers support for XDP (1/3)
  - /eBPF Direct-Access (DA)/ to packet data: single buffer per packet design
    - packet memory must be contiguous
