--- a/conference/NetDevConf2020-0x14/add-xdp-on-driver.org
+++ b/conference/NetDevConf2020-0x14/add-xdp-on-driver.org
@@ -62,40 +62,44 @@ Tricky part is *changing* driver */memory model/* to be compatible with XDP
 - Reserve tailroom for skb_shared_info and rely on build_skb() on XDP_PASS
 - Cannot allocate page fragments to support it (e.g. through napi_alloc_skb())
 - Rx buffers must be recycled to get high speed!
-* Slide: The Allocator								   :export:
-
-- Optimized for XDP mode. Ideally one page per frame model
-  - Supports split-page model, but the recycling is usually in-driver
-- Native buffer recycling for XDP
-  - Two caches available, fast cache (can be used in-IRQ only) and a ptr-ring (slower) cache
-  - XDP recycling usually runs in NAPI, no locking overhead
-- API supports DMA mapping and syncing
-* Slide: page_pool design principles					   :export:
+* Slide: page_pool allocator							   :export:
 :PROPERTIES:
 :reveal_extra_attr: class="mid-slide"
 :END:
-Kernel documentation on Documentation/networking/page_pool.rst
+- page_pool design principles
+- page_pool architecture
+- page_pool APIs
+- code examples
+** Slide: page_pool: design principles					   :export:
 
-- Need to create one pool for hardware queue
-  - Otherwise we need locking, which beats the page_pool purpose
-  - Some drivers will impose exceptions (i.e currently cpsw)
-- Optimized for speed. Cache line accessing is carefully taken into
-  consideration
-- Plan to add recycling on it for normal SKB traffic
-** page_pool architecture
+- optimized for */XDP memory-model/*
+  - ideally one page per frame model
+  - supports split-page model, but the recycling is usually in-driver
+- one page_pool for hardware rx queue
+  - run in NAPI context, no locking penalties
+  - some hw will impose exceptions (i.e. currently cpsw)
+- native buffer recycling for XDP
+  - two caches available
+    - /in-irq/ cache
+    - *ptr-ring* cache
+- API supports DMA mapping and syncing
+** page_pool: architecture
 
 #+ATTR_HTML: :class img-no-border
 [[file:images/page_pool_architecture.png]]
-** Slide: The API
+** Slide: page_pool: APIs
 
-- page_pool_create(): Create the pool object
-- page_pool_put_page(): Recycle or unmap the page
-- page_pool_release_page(): Unmap the page
-- page_pool_dev_alloc_pages(): Get a new page from cache or alloc a new one
-- page_pool_get_dma_addr(): Retreive the stoired DMA address
-- page_pool_get_dma_dir(): Retrieve the stored DMA direction
-- page_pool_recycle_direct(): Recycle the page immediately (safe context only)
-* Slide: Code examples pool creation					   :export:
+- Main APIs
+  - page_pool_create(): create the pool object
+  - page_pool_put_page(): recycle or unmap the page
+  - page_pool_release_page(): unmap the page
+  - page_pool_dev_alloc_pages(): get a new page from cache or alloc a new one
+  - page_pool_get_dma_addr(): retreive the stored DMA address
+  - page_pool_get_dma_dir(): retrieve the stored DMA direction
+  - page_pool_recycle_direct(): recycle the page immediately
+- kernel documentation available @ Documentation/networking/page_pool.rst
+** Slide: Code examples (1/2)							   :export:
+- pool registration opening /net_device/
 #+begin_src C
     struct page_pool_params pp_params = { 0 };
     struct xdp_rxq_info xdp_rxq;
@@ -118,13 +122,11 @@ Kernel documentation on Documentation/networking/page_pool.rst
     if (err)
         goto err_out;
 #+end_src
-** Slide: NAPI poolling
+** Slide: Code examples (2/2)							   :export:
+- NAPI poller
 #+begin_src C
-    /* NAPI Rx poller */
-
-    enum dma_data_direction dma_dir;
-
     dma_dir = page_pool_get_dma_dir(dring->page_pool);
+    ...
     while (done < budget) {
         if (some error)
             page_pool_recycle_direct(page_pool, page);
@@ -137,11 +139,8 @@ Kernel documentation on Documentation/networking/page_pool.rst
         }
     }
 #+end_src
-
-** Slide: Module unloading
-
+- module unloading
 #+begin_src C
-    /* Driver unload */
     page_pool_put_page(page_pool, page, false);
     xdp_rxq_info_unreg(&xdp_rxq);
 #+end_src
