--- a/conference/NetDevConf2020-0x14/add-xdp-on-driver.org
+++ b/conference/NetDevConf2020-0x14/add-xdp-on-driver.org
@@ -56,13 +56,14 @@ Tricky part is *changing* driver */memory model/* to be compatible with XDP
 
 
 * Slide: XDP requirements							   :export:
-- XDP frame in physical contiguous memory
-  - BPF Direct-Access for validating correctness
+- XDP frame in *physical contiguous memory*
+  - BPF /Direct-Access/ for validating correctness
   - No paged frames support, data cannot be split across pages
   - Read and Write access to the DMA buffers
   - Disable jumbo frames (packet < PAGE_SIZE) loading a BPF program
-- XDP headroom to push/pop header through bpf_xdp_adjust_head()
-- Reserve tailroom for skb_shared_info and rely on build_skb() on XDP_PASS
+- XDP /headroom/ *for xdp_frame* area
+  - add push/pop header through bpf_xdp_adjust_head()
+- Reserve /tailroom/ *for skb_shared_info* and *rely on build_skb()* on XDP_PASS
 - Cannot allocate page fragments to support it (e.g. through napi_alloc_skb())
 - Rx buffers must be recycled to get high speed!
 * Slide: The page_pool allocator                                     :export:
